// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notify should render default correctly 1`] = `
<div class="fx-notify fx-popup" style="z-index: 2000; display: none;">
  <div class="fx-notice-bar fx-notify_inner type--primary">
    <!---->
    <div class="fx-notice-bar_content">
      <div class="fx-notice-bar_content-inner">
        通知文本
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Notify should render prop type="danger" correctly 1`] = `
<div class="fx-notify fx-popup" style="z-index: 2000; display: none;">
  <div class="fx-notice-bar fx-notify_inner type--danger">
    <!---->
    <div class="fx-notice-bar_content">
      <div class="fx-notice-bar_content-inner">
        危险文本
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Notify should render prop type="success" correctly 1`] = `
<div class="fx-notify fx-popup" style="z-index: 2000; display: none;">
  <div class="fx-notice-bar fx-notify_inner type--success">
    <!---->
    <div class="fx-notice-bar_content">
      <div class="fx-notice-bar_content-inner">
        成功文本
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Notify should render prop type="warning" correctly 1`] = `
<div class="fx-notify fx-popup" style="z-index: 2000; display: none;">
  <div class="fx-notice-bar fx-notify_inner type--warning">
    <!---->
    <div class="fx-notice-bar_content">
      <div class="fx-notice-bar_content-inner">
        警告文本
      </div>
    </div>
    <!---->
  </div>
</div>
`;
